Adapt BLeak test to run on JRE 25
JDK internal packages have moved around a bit, so ClassStaticsExpander
needs updated.

Bug: 469841005
Change-Id: Iddd3406f663449d1e6b2d4490e39fc6607be1722